// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginForm /> When <LoginForm /> enable Gdpr agreement. Render gdpr agreement with checkbox confirm 1`] = `
.c2 {
  box-sizing: border-box;
  padding-bottom: 8px;
  padding-top: 8px;
  background: #FFF;
}

.c8 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
  background: #FFF;
}

.c10 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
  background: #FFF;
}

.c13 {
  box-sizing: border-box;
  background: #FFF;
}

.c11 {
  background: none;
  cursor: pointer;
  border: none;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  text-transform: uppercase;
  font-family: MuseoSans;
  font-weight: 900;
  width: inherit;
  padding: 18px 30px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  word-break: keep-all;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: none;
  border-radius: 3px;
  border-bottom-style: solid;
  color: #FFF;
  background: #ef8612;
  border-bottom-color: #e56209;
}

.c11:disabled {
  cursor: not-allowed;
}

.c11:hover,
.c11:focus {
  background: #e56209;
  border-bottom-color: #ef8612;
}

.c1 {
  box-sizing: border-box;
  padding-top: 8px;
  background: #FFF;
}

.c4 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
  background: #FFF;
}

.c14 {
  box-sizing: border-box;
  background: #FFF;
}

.c0 {
  font-family: MuseoSans;
  font-weight: 900;
  line-height: 1.2;
  text-align: left;
  color: #1566ad;
  font-size: 16px;
}

.c3 {
  font-family: MuseoSans;
  font-weight: 400;
  line-height: 1.2;
  text-align: left;
  color: #565656;
  font-size: 16px;
}

.c15 {
  font-family: MuseoSans;
  font-weight: 400;
  line-height: 1.2;
  text-align: left;
  color: #565656;
  font-size: 12px;
}

.c5 {
  position: relative;
  display: block;
}

.c6 {
  display: block;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background: inherit;
}

.c12 * {
  background: inherit;
}

.c16 {
  padding-left: 5px;
}

.c7 {
  padding: 8px 2px;
  font-size: 16px;
  border: none;
  border-bottom: 1px solid #ccc;
  width: 100%;
}

.c9 {
  text-align: center;
}

@media screen and (min-width:32em) {
  .c2 {
    padding-top: 8px;
  }
}

@media screen and (min-width:46em) {
  .c2 {
    padding-top: 16px;
  }
}

@media screen and (min-width:76em) {
  .c2 {
    padding-top: 32px;
  }
}

@media screen and (min-width:32em) {
  .c10 {
    padding-top: 8px;
    padding-bottom: 8px;
  }
}

@media screen and (min-width:46em) {
  .c10 {
    padding-top: 16px;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:76em) {
  .c10 {
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media screen and (min-width:32em) {
  .c1 {
    padding-top: 8px;
  }
}

@media screen and (min-width:46em) {
  .c1 {
    padding-top: 16px;
  }
}

@media screen and (min-width:76em) {
  .c1 {
    padding-top: 32px;
  }
}

@media (min-width:32em) {
  .c0 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c0 {
    font-size: 20px;
  }
}

@media (min-width:76em) {
  .c0 {
    font-size: 20px;
  }
}

@media (min-width:32em) {
  .c3 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c3 {
    font-size: 16px;
  }
}

@media (min-width:76em) {
  .c3 {
    font-size: 16px;
  }
}

@media (min-width:32em) {
  .c15 {
    font-size: 12px;
  }
}

@media (min-width:46em) {
  .c15 {
    font-size: 12px;
  }
}

@media (min-width:76em) {
  .c15 {
    font-size: 12px;
  }
}

<div>
  <form>
    <h6
      class="c0 c1"
    >
      Join One Big Switch today for FREE and instantly unlock your special offers!
    </h6>
    <div
      class="c2"
    >
      <p
        class="c3 c4"
      >
        My Postcode:
      </p>
      <span
        class="c5"
        display="block"
      >
        <span
          class="c6"
        >
          <input
            aria-labelledby="user.postcode_suburb"
            autocomplete="off"
            class="c7"
            id="user.postcode_suburb"
            name="user.postcode_suburb"
            placeholder="Postcode"
            required=""
            value=""
          />
        </span>
      </span>
    </div>
    <div
      class="c8"
    >
      <p
        class="c3 c4"
      >
        My Email:
      </p>
      <input
        aria-labelledby="user.email"
        class="c7"
        id="user.email"
        name="user.email"
        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\\\\.[a-z]{2,4}$"
        placeholder="Email"
        required=""
        title="Invalid email address"
        value=""
      />
    </div>
    <div
      class="c9 c10"
    >
      <button
        class="c11"
        type="submit"
      >
        See the offer
      </button>
    </div>
    <div
      class="c12 c13"
    >
      <p
        class="c3 c14"
      >
        <input
          data-testid="ckAgreement"
          required=""
          type="checkbox"
        />
        <small
          class="c15 c14"
        >
          By ticking this box, you agree to our
        </small>
        <small
          class="c15 c14"
        >
          <a
            class="c16"
            href="/confirmation-of-consent"
          >
            Confirmation of Consent
          </a>
          ,
          <a
            class="c16"
            href="/terms-and-conditions"
          >
            Terms and Conditions
          </a>
           
          and
          <a
            class="c16"
            href="/privacy-policy"
          >
            Privacy Policy
             
          </a>
        </small>
      </p>
    </div>
  </form>
</div>
`;

exports[`<LoginForm /> matches expected output 1`] = `
.c2 {
  box-sizing: border-box;
  padding-bottom: 8px;
  padding-top: 8px;
  background: #FFF;
}

.c8 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
  background: #FFF;
}

.c10 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
  background: #FFF;
}

.c13 {
  box-sizing: border-box;
  background: #FFF;
}

.c11 {
  background: none;
  cursor: pointer;
  border: none;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  text-transform: uppercase;
  font-family: MuseoSans;
  font-weight: 900;
  width: inherit;
  padding: 18px 30px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  word-break: keep-all;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: none;
  border-radius: 3px;
  border-bottom-style: solid;
  color: #FFF;
  background: #ef8612;
  border-bottom-color: #e56209;
}

.c11:disabled {
  cursor: not-allowed;
}

.c11:hover,
.c11:focus {
  background: #e56209;
  border-bottom-color: #ef8612;
}

.c1 {
  box-sizing: border-box;
  padding-top: 8px;
  background: #FFF;
}

.c4 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
  background: #FFF;
}

.c14 {
  box-sizing: border-box;
  background: #FFF;
}

.c0 {
  font-family: MuseoSans;
  font-weight: 900;
  line-height: 1.2;
  text-align: left;
  color: #1566ad;
  font-size: 16px;
}

.c3 {
  font-family: MuseoSans;
  font-weight: 400;
  line-height: 1.2;
  text-align: left;
  color: #565656;
  font-size: 16px;
}

.c15 {
  font-family: MuseoSans;
  font-weight: 400;
  line-height: 1.2;
  text-align: left;
  color: #565656;
  font-size: 12px;
}

.c5 {
  position: relative;
  display: block;
}

.c6 {
  display: block;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background: inherit;
}

.c12 * {
  background: inherit;
}

.c16 {
  padding-left: 5px;
}

.c7 {
  padding: 8px 2px;
  font-size: 16px;
  border: none;
  border-bottom: 1px solid #ccc;
  width: 100%;
}

.c9 {
  text-align: center;
}

@media screen and (min-width:32em) {
  .c2 {
    padding-top: 8px;
  }
}

@media screen and (min-width:46em) {
  .c2 {
    padding-top: 16px;
  }
}

@media screen and (min-width:76em) {
  .c2 {
    padding-top: 32px;
  }
}

@media screen and (min-width:32em) {
  .c10 {
    padding-top: 8px;
    padding-bottom: 8px;
  }
}

@media screen and (min-width:46em) {
  .c10 {
    padding-top: 16px;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:76em) {
  .c10 {
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media screen and (min-width:32em) {
  .c1 {
    padding-top: 8px;
  }
}

@media screen and (min-width:46em) {
  .c1 {
    padding-top: 16px;
  }
}

@media screen and (min-width:76em) {
  .c1 {
    padding-top: 32px;
  }
}

@media (min-width:32em) {
  .c0 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c0 {
    font-size: 20px;
  }
}

@media (min-width:76em) {
  .c0 {
    font-size: 20px;
  }
}

@media (min-width:32em) {
  .c3 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c3 {
    font-size: 16px;
  }
}

@media (min-width:76em) {
  .c3 {
    font-size: 16px;
  }
}

@media (min-width:32em) {
  .c15 {
    font-size: 12px;
  }
}

@media (min-width:46em) {
  .c15 {
    font-size: 12px;
  }
}

@media (min-width:76em) {
  .c15 {
    font-size: 12px;
  }
}

<div>
  <form>
    <input
      id="jump_path"
      name="jump_path"
      type="hidden"
      value="test_value"
    />
    <h6
      class="c0 c1"
    >
      Join One Big Switch today for FREE and instantly unlock your special offers!
    </h6>
    <div
      class="c2"
    >
      <p
        class="c3 c4"
      >
        My Postcode:
      </p>
      <span
        class="c5"
        display="block"
      >
        <span
          class="c6"
        >
          <input
            aria-labelledby="user.postcode_suburb"
            autocomplete="off"
            class="c7"
            id="user.postcode_suburb"
            name="user.postcode_suburb"
            placeholder="Postcode"
            required=""
            value="2000, Barangaroo"
          />
        </span>
      </span>
    </div>
    <div
      class="c8"
    >
      <p
        class="c3 c4"
      >
        My Email:
      </p>
      <input
        aria-labelledby="user.email"
        class="c7"
        id="user.email"
        name="user.email"
        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\\\\.[a-z]{2,4}$"
        placeholder="Email"
        required=""
        title="Invalid email address"
        value="user@example.com"
      />
    </div>
    <div
      class="c9 c10"
    >
      <button
        class="c11"
        disabled=""
        type="submit"
      >
        See the offer
      </button>
    </div>
    <div
      class="c12 c13"
    >
      <p
        class="c3 c14"
      >
        <input
          data-testid="ckAgreement"
          required=""
          type="checkbox"
        />
        <small
          class="c15 c14"
        >
          By ticking this box, you agree to our
        </small>
        <small
          class="c15 c14"
        >
          <a
            class="c16"
            href="/confirmation-of-consent"
          >
            Confirmation of Consent
          </a>
          ,
          <a
            class="c16"
            href="/terms-and-conditions"
          >
            Terms and Conditions
          </a>
           
          and
          <a
            class="c16"
            href="/privacy-policy"
          >
            Privacy Policy
             
          </a>
        </small>
      </p>
    </div>
  </form>
</div>
`;
